--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,13 +25,25 @@ body.freeze {
 }
 
 /* richt text html */
+section div.content a {
+	color:var(--color-black);
+	text-decoration:underline
+}
+section div.content a:hover {
+	color:var(--color-black);
+	text-decoration:none
+}
 
-section div ul {
+section div.content p {
+	margin-bottom: 1rem;
+}
+
+section div.content ul {
 	list-style:disc;
 	margin:1rem 0;
 	padding-left:2rem;
 }
-section div ul li {
+section div.content ul li {
 	list-style:disc;
-	margin-bottom: .5rem;
+	margin-bottom: 1rem;
 }
