--- a/static/styles/globals.css
+++ b/static/styles/globals.css
@@ -36,6 +36,7 @@
     --color-hva-navy: #1E1649;
     --color-hva-pink: #F25379;
     --color-hva-pink-enhanced: oklch(65.88% 0.257 9.82);
+    --color-hva-yellow-contrast: #FFF021;
     --color-hva-green: #02857D;
     --color-white: #FFFFFF;
 
